--- a/web/css/home/home-page.css
+++ b/web/css/home/home-page.css
@@ -19,3 +19,13 @@ img:hover {
     cursor:pointer;
 }
 
+#sentence .col-md-3 {
+    padding-left:200px;
+    margin-top:100px;
+
+}
+
+#sentence .col-md-3 p {
+    width:350px;
+    color: #ffffff;
+}
